cleaning up and fixed detail info icon on mobile

--- a/static/App.css
+++ b/static/App.css
@@ -1,7 +1,7 @@
 .main-app {
   display: flex;
   flex-direction: row;
-  height : 100%;
+  height: 100%;
 }
 
 .search-container {
@@ -14,23 +14,23 @@
 
 @media (max-width: 768px) {
   .search-container {
-   flex: inherit;
+    flex: inherit;
   }
 }
 
 .map-container {
-  position: relative; 
+  position: relative;
   flex: 3;
 }
 
 .place-detail-overlay {
-  position: absolute; 
-  top: 10%; 
+  position: absolute;
+  top: 10%;
   left: 10px;
-  z-index: 10; 
-  max-height: calc(80% - 20px); 
-  overflow-y: auto;  
-  background: rgba(255, 255, 255, 1);  
+  z-index: 10;
+  max-height: calc(80% - 20px);
+  overflow-y: auto;
+  background: rgba(255, 255, 255, 1);
   border-radius: 8px;
   padding: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -45,18 +45,20 @@
 
 
 .definition-info-popup {
-  position: absolute; 
-  top: 30%; 
+  position: absolute;
+  top: 30%;
   width: 80%;
-  z-index: 15; 
-  left : 5%;
-  right : 5%;
+  z-index: 15;
+  left: 5%;
+  right: 5%;
   background: white;
   border-radius: 8px;
   padding: 15px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+  z-index: 1000;
 }
-.definition-info-popup > h3 {
+
+.definition-info-popup>h3 {
   padding: 0;
   margin: 0;
 }
@@ -80,6 +82,7 @@
     display: flex;
     flex-direction: column;
   }
+
   .tab-wrapper {
     flex: 1 1 0;
     min-height: 0;
@@ -88,4 +91,3 @@
     height: 60vh;
   }
 }
-
